--- a/packages/tag-parser/package.json
+++ b/packages/tag-parser/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@spectera/tag-parser",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Tag parsing library for discord tags",
   "keywords": [],
   "author": "undied",
@@ -18,6 +18,7 @@
   "types": "./bundled/index.d.ts",
   "scripts": {
     "build": "node ./scripts/build.mjs",
+    "publish": "yarn dev && npm publish",
     "bundle": "rollup -c",
     "clean": "node ./scripts/clean.mjs",
     "build-types": "tsc --emitDeclarationOnly --outDir dist/types",
