--- a/packages/tag-parser/tsconfig.eslint.json
+++ b/packages/tag-parser/tsconfig.eslint.json
@@ -5,5 +5,5 @@
 		"target": "ESNext",
 		"module": "ESNext"
 	},
-	"include": ["src", "scripts", "tests", "rollup.config.js"]
+	"include": ["src", "scripts", "tests", "rollup.config.js", "jest.config.ts"]
 }
