--- a/packages/tag-parser/package.json
+++ b/packages/tag-parser/package.json
@@ -44,6 +44,7 @@
     "jest": "^27.4.5",
     "prettier": "^2.5.1",
     "rollup": "2.62.0",
+    "standard-version": "^9.3.2",
     "ts-node": "^10.4.0",
     "tslib": "2.3.1",
     "typescript": "4.5.4"
