--- a/package.json
+++ b/package.json
@@ -1,8 +1,30 @@
 {
   "name": "root",
+  "workspaces": [
+    "packages/*"
+  ],
+  "scripts": {
+    "prepare": "husky install .github/husky",
+    "build": "turbo run build",
+    "test": "turbo run test",
+    "lint": "turbo run lint",
+    "clean": "rm -rf \"packages/**/dist\" \"packages/**/.turbo\"",
+    "commit": "git-cz",
+    "cz": "git-cz",
+    "prepublishOnly": "yarn build"
+  },
   "private": true,
   "devDependencies": {
-    "lerna": "^4.0.0"
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-angular": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
+    "@commitlint/parse": "^16.2.1",
+    "cz-conventional-changelog": "^3.3.0",
+    "husky": "^7.0.4",
+    "jest": "^27.5.1",
+    "lerna": "^4.0.0",
+    "turbo": "^1.1.6",
+    "typescript": "^4.6.2"
   },
   "packageManager": "yarn@3.2.0"
 }
