--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "turbo run build",
     "test": "turbo run test",
     "lint": "turbo run lint",
-    "clean": "rm -rf \"packages/**/dist\" \"packages/**/.turbo\"",
+    "clean": "rm -rf packages/**/.turbo packages/**/dist",
     "commit": "git-cz",
     "cz": "git-cz",
     "prepublishOnly": "yarn build"
@@ -23,6 +23,7 @@
     "husky": "^7.0.4",
     "jest": "^27.5.1",
     "lerna": "^4.0.0",
+    "tsup": "^5.12.1",
     "turbo": "^1.1.6",
     "typescript": "^4.6.2"
   },
