--- a/packages/brawlstats/package.json
+++ b/packages/brawlstats/package.json
@@ -52,9 +52,7 @@
 		"dotenv": "16.0.0",
 		"eslint": "8.11.0",
 		"prettier": "2.5.1",
-		"standard-version": "^9.3.2",
-		"tsup": "5.12.1",
-		"typescript": "4.6.2"
+		"standard-version": "^9.3.2"
 	},
 	"dependencies": {
 		"@discordjs/collection": "^0.5.0",
