--- a/packages/tag-parser/src/tsconfig.json
+++ b/packages/tag-parser/src/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"extends": "./tsconfig.base.json",
+	"extends": "../../../tsconfig.base.json",
 	"compilerOptions": {
 		"allowJs": true,
 		"rootDir": "src",
@@ -7,8 +7,8 @@
 		"noUnusedLocals": true,
 		"composite": false,
 		"declaration": false,
-		"declarationMap": false
+		"declarationMap": false,
+		"tsBuildInfoFile": ".tsbuildinfo"
 	},
-	"include": ["./src"],
-	"exclude": ["./bundled"]
+	"exclude": ["./tsconfig.json"]
 }
