--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -5,5 +5,5 @@
 		"target": "ESNext",
 		"module": "ESNext"
 	},
-	"include": ["src", "scripts", "tsup.config.ts", "tests", "jest.config.mjs", "babel.config.cjs", "index.js", "commitlint.config.cjs"]
+	"include": ["src", "scripts", "**/tests", "packages/**/tsup.config.ts", "packages/**/jest.config.ts"]
 }
