--- a/package.json
+++ b/package.json
@@ -25,7 +25,19 @@
     "lerna": "^4.0.0",
     "tsup": "^5.12.1",
     "turbo": "^1.1.6",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "@sapphire/eslint-config": "4.3.0",
+    "@sapphire/prettier-config": "1.4.0",
+    "@sapphire/ts-config": "3.3.2",
+    "@types/jest": "^27.4.1",
+    "@types/node": "17.0.18",
+    "dotenv": "16.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.8.0",
+    "eslint": "^8.5.0",
+    "prettier": "^2.5.1",
+    "standard-version": "^9.3.2",
+    "tslib": "2.3.1"
   },
   "packageManager": "yarn@3.2.0"
 }
