--- a/packages/tag-parser/package.json
+++ b/packages/tag-parser/package.json
@@ -26,17 +26,5 @@
     "dev": "yarn format && yarn clean && yarn build",
     "test": "jest"
   },
-  "prettier": "@sapphire/prettier-config",
-  "devDependencies": {
-    "@sapphire/eslint-config": "^4.0.8",
-    "@sapphire/prettier-config": "^1.2.7",
-    "@sapphire/ts-config": "^3.1.6",
-    "@types/jest": "27.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.8.0",
-    "@typescript-eslint/parser": "^5.8.0",
-    "eslint": "^8.5.0",
-    "prettier": "^2.5.1",
-    "standard-version": "^9.3.2",
-    "tslib": "2.3.1"
-  }
+  "prettier": "@sapphire/prettier-config"
 }
