chore: update files

--- a/lerna.json
+++ b/lerna.json
@@ -37,6 +37,10 @@
           "typescript",
           "yarn"
         ]
+      },
+      "bootstrap": {
+        "ignore": "component-*",
+        "npmClientArgs": [""]
       }
     }
   }
