--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -5,5 +5,5 @@
 		"target": "ESNext",
 		"module": "ESNext"
 	},
-	"include": ["src", "scripts", "**/tests", "packages/**/tsup.config.ts", "packages/**/jest.config.ts"]
+	"include": ["src", "scripts", "**/tests", "packages/**/src/**/*.ts", "packages/**/tsup.config.ts", "packages/**/jest.config.ts"]
 }
