--- a/packages/brawlcli/src/tsconfig.json
+++ b/packages/brawlcli/src/tsconfig.json
@@ -8,7 +8,8 @@
 		"baseUrl": ".",
 		"preserveConstEnums": true,
 		"paths": {
-			"_functions/*": ["functions/*.ts"]
+			"_functions/*": ["functions/*.ts"],
+			"_commands/*": ["commands/*.ts"]
 		}
 	},
 	"include": ["."]
