--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "lerna": "^4.0.0",
     "prettier": "^2.6.1",
     "standard-version": "^9.3.2",
+    "ts-jest": "^27.1.4",
+    "ts-node": "^10.7.0",
     "tslib": "2.3.1",
     "tsup": "^5.12.1",
     "turbo": "^1.1.10",
