fix: export dts

--- a/packages/brawlstats/src/tsconfig.json
+++ b/packages/brawlstats/src/tsconfig.json
@@ -6,9 +6,8 @@
 		"rootDir": ".",
 		"baseUrl": ".",
 		"skipLibCheck": true,
-		"composite": true,
 		"tsBuildInfoFile": ".tsbuildinfo"
 	},
-	"include": [".", "./**/*.json"],
+	"include": ["."],
 	"exclude": ["./tsconfig.json"]
 }
