--- a/packages/brawlstats/package.json
+++ b/packages/brawlstats/package.json
@@ -4,6 +4,8 @@
 	"description": "A simple API Wrapper for Brawl Stars",
 	"main": "dist/index.js",
 	"module": "dist/index.mjs",
+	"browser": "dist/index.global.js",
+	"unpkg": "dist/index.global.js",
 	"types": "dist/index.d.ts",
 	"exports": {
 		"import": "./dist/index.mjs",
