--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@commitlint/config-conventional": "^16.2.1",
     "@commitlint/config-lerna-scopes": "^16.2.2",
     "@commitlint/parse": "^16.2.1",
+    "@favware/npm-deprecate": "^1.0.4",
     "@sapphire/eslint-config": "4.3.3",
     "@sapphire/prettier-config": "1.4.2",
     "@sapphire/ts-config": "3.3.4",
