--- a/turbo.json
+++ b/turbo.json
@@ -2,7 +2,7 @@
   "$schema": "https://turborepo.org/schema.json",
   "pipeline": {
     "build": {
-      "dependsOn": ["^build"],
+      "dependsOn": ["^build", "format", "lint"],
       "outputs": ["dist/**"]
     },
     "lint": {
@@ -12,6 +12,10 @@
     "test": {
       "dependsOn": [],
       "outputs": []
-    }
+    },
+	"format": {
+		"dependsOn": [],
+		"outputs": []
+	}
   }
 }
