--- a/packages/brawlstats/src/tsconfig.json
+++ b/packages/brawlstats/src/tsconfig.json
@@ -1,10 +1,12 @@
 {
-	"extends": "../tsconfig.base.json",
+	"extends": "@sapphire/ts-config/extra-strict-without-decorators",
 	"compilerOptions": {
 		"allowJs": true,
-		"outDir": "../dist",
+		"outDir": "../types",
 		"rootDir": ".",
 		"skipLibCheck": true,
+		"composite": false,
+		"emitDeclarationOnly": true,
 		"tsBuildInfoFile": ".tsbuildinfo"
 	},
 	"include": ["."],
