--- a/packages/brawlstats/.eslintrc.yml
+++ b/packages/brawlstats/.eslintrc.yml
@@ -13,3 +13,4 @@ rules:
   '@typescript-eslint/explicit-module-boundary-types': off
   '@typescript-eslint/no-namespace': off
   '@typescript-eslint/no-non-null-assertion': off
+  '@typescript-eslint/unified-signatures': off
