--- a/packages/brawlstats/src/tsconfig.json
+++ b/packages/brawlstats/src/tsconfig.json
@@ -1,12 +1,11 @@
 {
-	"extends": "@sapphire/ts-config/extra-strict-without-decorators",
+	"extends": "../tsconfig.base.json",
 	"compilerOptions": {
 		"allowJs": true,
-		"outDir": "../types",
+		"outDir": "../dist",
 		"rootDir": ".",
+		"baseUrl": ".",
 		"skipLibCheck": true,
-		"composite": false,
-		"emitDeclarationOnly": true,
 		"tsBuildInfoFile": ".tsbuildinfo"
 	},
 	"include": ["."],
