--- a/packages/brawlstats/package.json
+++ b/packages/brawlstats/package.json
@@ -42,7 +42,6 @@
 	"prettier": "@sapphire/prettier-config",
 	"dependencies": {
 		"@discordjs/collection": "^0.5.0",
-		"@sapphire/fetch": "^2.3.1",
-		"colorette": "^2.0.16"
+		"@sapphire/fetch": "^2.3.1"
 	}
 }
