chore: fix ci issues

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -87,3 +87,5 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
           directory: coverage/
           fail_ci_if_error: true
+env:
+  BRAWLSTARS_TOKEN: ${{ secrets.BRAWLSTARS_TOKEN }}
