--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "prepare": "husky install .github/husky",
     "build": "turbo run build",
     "test": "turbo run test",
-    "test:coverage": "yarn jest --coverage",
+    "coverage": "turbo run coverage",
     "lint": "turbo run lint",
     "clean": "rm -rf packages/**/.turbo packages/**/dist",
     "commit": "git-cz",
@@ -34,7 +34,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
-    "jest": "^28.1.0",
+    "jest": "^28.0.2",
     "lerna": "^4.0.0",
     "prettier": "^2.6.2",
     "standard-version": "^9.3.2",
