--- a/packages/brawlstats/package.json
+++ b/packages/brawlstats/package.json
@@ -18,6 +18,7 @@
 	"scripts": {
 		"build": "tsup",
 		"test": "jest",
+		"coverage": "jest --coverage",
 		"sversion": "standard-version",
 		"commit": "git-cz",
 		"cz": "git-cz",
