--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "prepare": "husky install .github/husky",
     "build": "turbo run build",
     "test": "turbo run test",
+	"coverage": "jest --coverage --ci",
     "lint": "turbo run lint",
     "clean": "rm -rf packages/**/.turbo packages/**/dist",
     "commit": "git-cz",
