--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -5,7 +5,7 @@ on:
 jobs:
   Linting:
     name: Linting
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - name: Checkout Project
         uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # tag=v3
@@ -70,7 +70,7 @@ jobs:
   Upload_Coverage_Report:
     name: Upload coverage report to codecov
     needs: [Testing]
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - name: Checkout Project
         uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # tag=v3
