chore: more tests

--- a/codecov.yml
+++ b/codecov.yml
@@ -2,3 +2,4 @@ ignore:
   - "packages/brawlcli"
   - "packages/brawlstats/src/lib/errors"
   - "packages/brawlstats/src/lib/types"
+  - "packages/brawlstats/src/lib/utils.ts"
