--- a/turbo.json
+++ b/turbo.json
@@ -2,7 +2,7 @@
   "$schema": "https://turborepo.org/schema.json",
   "pipeline": {
     "build": {
-      "dependsOn": ["^build", "format", "lint"],
+      "dependsOn": ["format", "lint"],
       "outputs": ["dist/**"]
     },
     "lint": {
