--- a/packages/brawlstats/package.json
+++ b/packages/brawlstats/package.json
@@ -22,7 +22,6 @@
 		"commit": "git-cz",
 		"cz": "git-cz",
 		"watch": "tsup --watch",
-		"prepublish": "yarn build",
 		"lint": "eslint src/**/*.ts --fix"
 	},
 	"license": "Apache-2.0",
@@ -43,5 +42,6 @@
 	"dependencies": {
 		"@discordjs/collection": "^0.6.0",
 		"@sapphire/fetch": "^2.3.1"
-	}
+	},
+	"gitHead": "763b59db0325629ab5abddf90e729db611839610"
 }
