--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "build": "turbo run build",
     "test": "turbo run test",
+    "bump": "turbo run bump --concurrency=1",
+    "check-update": "turbo run check-update",
     "coverage": "jest --coverage --ci",
     "lint": "turbo run lint",
     "clean": "rm -rf packages/**/.turbo packages/**/dist",
@@ -19,6 +21,7 @@
     "@commitlint/config-conventional": "^16.2.4",
     "@commitlint/config-lerna-scopes": "^16.2.4",
     "@commitlint/parse": "^16.2.1",
+    "@favware/cliff-jumper": "^1.7.0",
     "@favware/npm-deprecate": "^1.0.4",
     "@sapphire/eslint-config": "4.3.4",
     "@sapphire/prettier-config": "1.4.3",
@@ -34,7 +37,6 @@
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
     "jest": "^28.1.0",
-    "lerna": "^4.0.0",
     "prettier": "^2.6.2",
     "standard-version": "^9.3.2",
     "ts-jest": "^28.0.2",
