--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -43,6 +43,8 @@ jobs:
         run: yarn build
       - name: Bump Version & Publish
         uses: sergeysova/jq-action@v2
+        with: 
+          cmd: ''
         run: |
           # Resolve the tag to be used. "next" for push events, "pr-{prNumber}" for dispatch events.
           TAG=$([[ ${{ github.event_name }} == 'push' ]] && echo 'next' || echo 'pr-${{ github.event.inputs.prNumber }}')
