chore: ﻿ - temporary commit.
permalink: http://whatthecommit.com/1f8241fd7bfb42c7b1e54d5c7f069f4f

--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Bump Version & Publish
         uses: sergeysova/jq-action@v2
         with: 
-          cmd: ''
+          cmd: 'jq'
         run: |
           # Resolve the tag to be used. "next" for push events, "pr-{prNumber}" for dispatch events.
           TAG=$([[ ${{ github.event_name }} == 'push' ]] && echo 'next' || echo 'pr-${{ github.event.inputs.prNumber }}')
