chore: i'm too old for this shit!
permalink: http://whatthecommit.com/77568f80f1a4f77b1d8d06a4b76c3559

--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -53,7 +53,7 @@ jobs:
           yarn turbo run bump --concurrency=1 -- --preid "${TAG}.$(git rev-parse --verify --short HEAD)"
           for d in packages/*; do
             pushd $d
-            if ! [[exec cat $d/package.json | jq $ARGS.private]]; then
+            if "! [[exec cat $d/package.json | jq $ARGS.private]]"; then
               yarn npm publish --tag ${TAG}
             popd
           done
