--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -53,8 +53,9 @@ jobs:
           yarn turbo run bump --concurrency=1 -- --preid "${TAG}.$(git rev-parse --verify --short HEAD)"
           for d in packages/*; do
             pushd $d
-            if "! [[exec cat $d/package.json | jq $ARGS.private]]"; then
+            if ! cat $d/package.json | jq $ARGS.private; then
               yarn npm publish --tag ${TAG}
+            fi
             popd
           done
         env:
