chore: revert "fuckup".
permalink: http://whatthecommit.com/59bca29a290ae161390887144d87f74f

--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -53,7 +53,7 @@ jobs:
           yarn config set npmPublishRegistry "https://registry.yarnpkg.com"
           yarn turbo run bump --concurrency=1 -- --preid "${TAG}.$(git rev-parse --verify --short HEAD)"
           for d in packages/*; do
-            if ! cat $d/package.json | jq $ARGS.private; then
+            if ! [[ "$(cat $d/package.json | jq $ARGS.private)" == "null" ]]
             pushd $d
               yarn npm publish --tag ${TAG}
             popd
