chore: last time i said it works? i was kidding. try this.
permalink: http://whatthecommit.com/ce731bef18432097c682203cde176b0b

--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -54,6 +54,7 @@ jobs:
           yarn turbo run bump --concurrency=1 -- --preid "${TAG}.$(git rev-parse --verify --short HEAD)"
           for d in packages/*; do
             if [[ "$(cat $d/package.json | jq $ARGS.private)" == "null" ]]
+            then
               pushd $d
               yarn npm publish --tag ${TAG}
               popd
