--- a/packages/brawlstats/package.json
+++ b/packages/brawlstats/package.json
@@ -9,6 +9,11 @@
 		"import": "./dist/index.mjs",
 		"require": "./dist/index.js"
 	},
+	"files": [
+		"dist/**/*.js*",
+		"dist/**/*.mjs*",
+		"dist/**/*.d*"
+	],
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/SpecteraLabs/npm-packages/tree/main/packages/brawlstats"
