--- a/packages/brawlstats/package.json
+++ b/packages/brawlstats/package.json
@@ -7,8 +7,10 @@
 	"types": "dist/index.d.ts",
 	"exports": {
 		"import": "./dist/index.mjs",
-		"require": "./dist/index.js"
+		"require": "./dist/index.js",
+		"types": "./dist/index.d.ts"
 	},
+	"sideEffects": false,
 	"files": [
 		"dist/**/*.js*",
 		"dist/**/*.mjs*",
@@ -16,7 +18,7 @@
 	],
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/SpecteraLabs/npm-packages/tree/main/packages/brawlstats"
+		"url": "git+https://github.com/SpecteraLabs/npm-packages.git"
 	},
 	"scripts": {
 		"build": "tsup",
