--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@sapphire/eslint-config": "4.3.4",
     "@sapphire/prettier-config": "1.4.3",
     "@sapphire/ts-config": "3.3.4",
+    "@types/depd": "^1.1.32",
     "@types/jest": "^27.5.0",
     "@types/node": "17.0.18",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
