--- a/packages/brawlstats/src/tsconfig.json
+++ b/packages/brawlstats/src/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"extends": "@sapphire/ts-config/extra-strict-without-decorators",
 	"compilerOptions": {
+		"experimentalDecorators": true,
 		"allowJs": true,
 		"outDir": "../types",
 		"rootDir": ".",
