--- a/packages/brawlstats/package.json
+++ b/packages/brawlstats/package.json
@@ -5,6 +5,8 @@
 	"main": "dist/index.js",
 	"module": "dist/index.mjs",
 	"types": "dist/index.d.ts",
+	"unpkg": "dist/index.global.js",
+	"browser": "dist/index.global.js",
 	"exports": {
 		"import": "./dist/index.mjs",
 		"require": "./dist/index.js",
